--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,6 @@
+# Try to speedup esc key in vim
+set -s escape-time 10
+
 # Some tweaks to the status line
 set -g status-right "%H:%M"
 
@@ -22,27 +25,61 @@ bind-key l select-pane -R
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 
-set -g default-terminal "tmux-256color"
+set -g default-terminal "xterm-256color"
 
-#### COLOUR (Solarized dark)
+set-option -g status-position top
+
+# #### COLOUR (Solarized dark)
+#
+# # default statusbar colors
+# set-option -g status-style fg=yellow,bg=black #yellow and base02
+#
+# # default window title colors
+# set-window-option -g window-status-style fg=brightblue,bg=default #base0 and default
+# #set-window-option -g window-status-style dim
+#
+# # active window title colors
+# set-window-option -g window-status-current-style fg=brightred,bg=default #orange and default
+# #set-window-option -g window-status-current-style bright
+#
+# # pane border
+# set-option -g pane-border-style fg=black #base02
+# set-option -g pane-active-border-style fg=brightgreen #base01
+#
+# # message text
+# set-option -g message-style fg=brightred,bg=black #orange and base01
+#
+# # pane number display
+# set-option -g display-panes-active-colour blue #blue
+# set-option -g display-panes-colour brightred #orange
+#
+# # clock
+# set-window-option -g clock-mode-colour green #green
+#
+# # bell
+# set-window-option -g window-status-bell-style fg=black,bg=red #base02, red
+
+#### COLOUR (Solarized light)
 
 # default statusbar colors
-set-option -g status-style fg=yellow,bg=black #yellow and base02
+set-option -g status-style fg=brightyellow,bg=white #yellow and base2
 
 # default window title colors
-set-window-option -g window-status-style fg=brightblue,bg=default #base0 and default
+set-window-option -g window-status-style fg=brightyellow,bg=default #base0 and default
+
 #set-window-option -g window-status-style dim
 
 # active window title colors
-set-window-option -g window-status-current-style fg=brightred,bg=default #orange and default
+set-window-option -g status-style fg=brightyellow,bg=white #yellow and base2
+
 #set-window-option -g window-status-current-style bright
 
 # pane border
-set-option -g pane-border-style fg=black #base02
-set-option -g pane-active-border-style fg=brightgreen #base01
+set-option -g pane-border-style fg=white #base2
+set-option -g pane-active-border-style fg=brightcyan #base1
 
 # message text
-set-option -g message-style fg=brightred,bg=black #orange and base01
+set-option -g message-style fg=brightred,bg=white #orange and base2
 
 # pane number display
 set-option -g display-panes-active-colour blue #blue
@@ -52,34 +89,4 @@ set-option -g display-panes-colour brightred #orange
 set-window-option -g clock-mode-colour green #green
 
 # bell
-set-window-option -g window-status-bell-style fg=black,bg=red #base02, red
-
-# #### COLOUR (Solarized light)
-# 
-# # default statusbar colors
-# set-option -g status-style fg=yellow,bg=white #yellow and base2
-# 
-# # default window title colors
-# set-window-option -g window-status-style fg=brightyellow,bg=default #base0 and default
-# #set-window-option -g window-status-style dim
-# 
-# # active window title colors
-# set-window-option -g window-status-current-style fg=brightred,bg=default #orange and default
-# #set-window-option -g window-status-current-style bright
-# 
-# # pane border
-# set-option -g pane-border-style fg=white #base2
-# set-option -g pane-active-border-style fg=brightcyan #base1
-# 
-# # message text
-# set-option -g message-style fg=brightred,bg=white #orange and base2
-# 
-# # pane number display
-# set-option -g display-panes-active-colour blue #blue
-# set-option -g display-panes-colour brightred #orange
-# 
-# # clock
-# set-window-option -g clock-mode-colour green #green
-# 
-# # bell
-# set-window-option -g window-status-bell-style fg=white,bg=red #base2, red
+set-window-option -g window-status-bell-style fg=white,bg=red #base2, red
