--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,6 +27,9 @@ bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 
 set -g default-terminal "xterm-256color"
 
+set -g window-status-format " #W#F"
+set -g window-status-current-format " #W "
+
 set-option -g status-position top
 
 # #### COLOUR (Solarized dark)
@@ -70,7 +73,7 @@ set-window-option -g window-status-style fg=brightyellow,bg=default #base0 and d
 #set-window-option -g window-status-style dim
 
 # active window title colors
-set-window-option -g status-style fg=brightyellow,bg=white #yellow and base2
+set-window-option -g window-status-current-style fg=black,bg=brightcyan #yellow and base2
 
 #set-window-option -g window-status-current-style bright
 
